Uncollapse sidebar, fix <ol>, <ul> padding in articles

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -7,3 +7,9 @@ header[role="banner"] {
   padding-top: 1em;
   padding-bottom: 1em;
 }
+
+article {
+  ol, ul {
+    padding-left: 1em;
+  }
+}
